Se agrega las opciones para agregar Grupo

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,16 +40,12 @@ file.reference.poi-ooxml-3.15.jar=lib\\poi-ooxml-3.15.jar
 file.reference.poi-ooxml-schemas-3.15.jar=lib\\poi-ooxml-schemas-3.15.jar
 file.reference.slf4j-api-1.7.25.jar=lib\\slf4j-api-1.7.25.jar
 file.reference.slf4j-log4j12-1.7.25.jar=lib\\slf4j-log4j12-1.7.25.jar
-file.reference.sqlite-jdbc-3.20.0.jar=lib\\sqlite-jdbc-3.20.0.jar
+file.reference.sqlite-jdbc-3.21.0.jar=lib\\sqlite-jdbc-3.21.0.jar
 file.reference.webcam-capture-0.3.10.jar=lib\\webcam-capture-0.3.10.jar
 file.reference.xmlbeans-2.6.0.jar=lib\\xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.jpa20-persistence.classpath}:\
-    ${libs.eclipselink.classpath}:\
-    ${file.reference.sqlite-jdbc-3.20.0.jar}:\
-    ${libs.beans-binding.classpath}:\
     ${file.reference.webcam-capture-0.3.10.jar}:\
     ${file.reference.slf4j-log4j12-1.7.25.jar}:\
     ${file.reference.log4j-1.2.17.jar}:\
@@ -61,7 +57,10 @@ javac.classpath=\
     ${file.reference.poi-3.15.jar}:\
     ${file.reference.poi-ooxml-3.15.jar}:\
     ${file.reference.poi-ooxml-schemas-3.15.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${libs.eclipselink.classpath}:\
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.sqlite-jdbc-3.21.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
